add webp, minor css adaptions, defer loading of scripts

--- a/guide_de.html
+++ b/guide_de.html
@@ -54,7 +54,11 @@
             
             <div class="carousel-item active">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step1-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step1-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step1-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step1-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#1. Zuerst die heruntergeladenen Bilder entpacken und die gewünschten Bilder in die Fotos-App ablegen.</h3>
                 </div>
@@ -63,7 +67,11 @@
             
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step2-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step2-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step2-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step2-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text pin-top">
                   <h3>#2. Beim gewünschten Hintergrundebild, die Taste "Teilen" tippen.</h3>
                   </div>
@@ -72,7 +80,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step3-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step3-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step3-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step3-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#3. Dann 'Als Hintergrund' tippen.</h3>
                   </div>
@@ -81,7 +93,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step4-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step4-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step4-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step4-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text pin-top">
                   <h3>#4. Nun das Bild wie gewünscht positionieren und mit 'Sichern' und 'Beide' aktivieren.</h3>
                   </div>
@@ -90,7 +106,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step5-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step5-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step5-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step5-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#5. Gehe zum Home-Bildschirm zurück und öffne die 'Kurzbefehle' App.</h3>
                   </div>
@@ -99,7 +119,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step6-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step6-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step6-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step6-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#6. Tippe auf das '+' Symbol um einen neuen Kurzbefehl hinzuzufügen.</h3>
                   </div>
@@ -108,7 +132,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step7-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step7-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step7-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step7-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#7. Tippe auf die '+ Aktion hinzufügen' Schaltfläche.</h3>
                   </div>
@@ -117,7 +145,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step8-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step8-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step8-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step8-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#8. Finde und tippe auf 'App öffnen' (du kannst auch das Textfeld zur suche verwenden).</h3>
                   </div>
@@ -126,7 +158,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step9-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step9-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step9-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step9-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#9. Tippe auf 'Auswählen' und wähle die App aus welche du später durch ein neues Symbol öffnen willst.</h3>
                   </div>
@@ -135,7 +171,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step10-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step10-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step10-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step10-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#10. Tippe auf 'Mehr' (drei Punkte) in der oberen rechten Ecke.</h3>
                   </div>
@@ -144,7 +184,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step11-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step11-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step11-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step11-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#11. Tippe auf 'Zum Home-Bildschirm'.</h3>
                   </div>
@@ -153,7 +197,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step12-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step12-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step12-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step12-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#12. Tippe auf das Platzhaltersymbol unter 'Name und Symbol für Home-Bildschirm' und wähle 'Foto auswählen'. Finde und wähle das gewünschte Symbolbild aus. Optional kann hier ein Name vergeben werden der am Home-Bildschirm angezeigt wird.</h3>
                   </div>
@@ -162,7 +210,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step13-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step13-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step13-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step13-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#13. Tippe auf 'Hinzufügen' oben rechts.</h3>
                   </div>
@@ -171,7 +223,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step14-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step14-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step14-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step14-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#14. Tippe auf 'Fertig'.</h3>
                   </div>
@@ -180,7 +236,11 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step15-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <picture>
+                  <source srcset="img/guide_en/ios-design-installation-guide-step15-en.webp" type="image/webp">
+                  <source srcset="img/guide_en/ios-design-installation-guide-step15-en.jpg" type="image/jpeg">
+                  <img src="img/guide_en/ios-design-installation-guide-step15-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                </picture>
                 <div class="guide-text">
                   <h3>#15. Das neue Symbol sollte schon am Home-Bildschirm zu finden sein. Wiederhole die Schritte 6-14 für jede weitere App die du anpassen möchtest.</h3>
                   </div>
@@ -205,26 +265,20 @@
 
   <footer>
     <div class="container">
-      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
-      <p>This website does not use tracking tools and cookies, however the linked gumroad plugin does.</p>
-      <p>Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
+      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries. This website does not use tracking tools and cookies, however the linked gumroad plugin does. Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
       <p>&copy; jarofrey.com 2020. All Rights Reserved.</p>
     </div>
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
   
   <!-- Plugin JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" defer></script>
 
   <!-- Custom scripts for this template -->
-  <script src="jaroscript.min.js"></script>
-
-  <!--gumroad-->
-  <!-- <script async src="https://gumroad.com/js/gumroad.js"></script> -->
-
+  <script src="jaroscript.min.js" defer></script>
 
 </body>
 
