--- a/index.html
+++ b/index.html
@@ -755,6 +755,12 @@
                 <ul class="timeline">
   
                   <li>
+                    <a>more icons</a>
+                    <a class="float-right">16 Feb, 2021</a>
+                    <p>Some new common icons added, after requested by some collaborators. If you miss some icons, just contact me :)</p>
+                  </li>
+
+                  <li>
                     <a>german installation guide</a>
                     <a class="float-right">21 Nov, 2020</a>
                     <p>As i got a lot of requests for a german installation guide, I added a translation and a link to a german installation guide. Hope this helps :)</p>
@@ -766,14 +772,14 @@
                     <p>for the time being the packs are now finished. so at least as far as it was planned. the third pack 'plays' in the woods and has very nice impressions to offer</p>
                   </li>
 
+                    <div class="collapse multi-collapse" id="collapseDiv">
+  
                   <li>
                     <a>second pack finished</a>
                     <a class="float-right">18 Nov, 2020</a>
                     <p>After a short break, i finished the second pack as promised.</p>
                   </li>
 
-                    <div class="collapse multi-collapse" id="collapseDiv">
-  
                   <li>
                     <a>new nice page</a>
                     <a class="float-right">29 Oct, 2020</a>
