--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">DesignKit<sub> JaroFrey</sub></a>
 
-    <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
+    <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger"><s>Buy now.</s> Free download.</a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -68,7 +68,7 @@
             <h1 class="mb-5">Customize the background and icons to compliment the outstanding design of your iPhone or iPad.
             </h1>
             <a href="#pack1" class="btn btn-outline btn-xl js-scroll-trigger">Discover.</a>
-            <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
+            <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger"><s>Buy now.</s> Free download.</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -499,7 +499,7 @@
   </section>
 
 
-  <section class="features bg-primary" id="guide">
+  <section class="features bg-primary" id="guide" hidden>
     <div class="container">
       <div class="section-heading text-center">
         <h2>Installation Guide</h2>
@@ -755,6 +755,26 @@
                 <ul class="timeline">
   
                   <li>
+                    <a>freeee</a>
+                    <a class="float-right">20 March, 2021</a>
+                    <p>Made the whole project available for free for all of you. Still it is possible to pay what you want. :)</p>
+                  </li>
+
+                  <li>
+                    <a>updated packs</a>
+                    <a class="float-right">20 March, 2021</a>
+                    <p>Updated the image files to meet some size limitation for content provided for free on gumroad</p>
+                  </li>
+
+                  <li>
+                    <a>updated website</a>
+                    <a class="float-right">20 March, 2021</a>
+                    <p>Some broken elements were removed, email support removed and guide stripped down :)</p>
+                  </li>
+
+                    <div class="collapse multi-collapse" id="collapseDiv">
+  
+                  <li>
                     <a>more icons</a>
                     <a class="float-right">16 Feb, 2021</a>
                     <p>Some new common icons added, after requested by some collaborators. If you miss some icons, just contact me :)</p>
@@ -772,8 +792,6 @@
                     <p>for the time being the packs are now finished. so at least as far as it was planned. the third pack 'plays' in the woods and has very nice impressions to offer</p>
                   </li>
 
-                    <div class="collapse multi-collapse" id="collapseDiv">
-  
                   <li>
                     <a>second pack finished</a>
                     <a class="float-right">18 Nov, 2020</a>
@@ -824,7 +842,7 @@
 
 
 
-  <section class="contact bg-primary" id="contact">
+  <section class="contact bg-primary" id="contact" hidden>
     <div class="container">
       <h3>Suggestions, problems, icon wishes?<br/>
         I would love to hear from you.<br/>
